# GI-Static-Data-Library

./: .gitattributes  .gitignore  LICENSE  LibTest.py  README.md  pyproject.toml  setup.py
genshin_impact/: __init__.py  editor.pyw  gisl.py  gisl2.py  gisl_data.json
genshin_impact/character_data/: aino.json  aino.json.bak  albedo.json  albedo.json.bak  hu_tao.json
gisl_data_library/: gisl.py  gisl_data.json
gisl_data_library.egg-info/: PKG-INFO
